@@ -1,3 +1,9 @@
+2011-02-13  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* symtab.c (find_pc_sect_line): New variable objfile, initialize it
+	from S.  Iterate S using ALL_OBJFILE_SYMTABS.  Verify BV for each S.
+	* symtab.h (struct symtab) <next>: Comment extension.
+
 2011-02-12  Yao Qi  <yao@codesourcery.com>
 
 	* Makefile.in (CLEANDIRS): Remove duplicated common dir.
